# nonlocal-matchfilter

./: .containerignore  CITATION.cff  Containerfile  LICENSE  README.md  pyproject.toml
conf/: __init__.py  test.yaml  train.yaml
conf/callbacks/: default.yaml  device_stats_monitor.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  rich_model_summary.yaml
conf/data/: default.yaml
conf/data/dataset/: uibraw_image_synthetic_sensor.yaml  uibselection_image_synthetic_gaussian.yaml
conf/data/loader/: default.yaml
conf/data/transforms/: default.yaml
conf/experiment/: gauss_image_nlmatchfilter.yaml  gauss_image_nlmatchfilter_ms.yaml  rawnoise_image_nlmatchfilter.yaml  rawnoise_image_nlmatchfilter_ms.yaml
conf/hydra/: default.yaml
conf/logger/: aim.yaml  tensorboard.yaml
conf/model/: image.yaml
conf/model/loss/: l1.yaml
conf/model/network/: nlmatchfilter.yaml  nlmatchfilter_cherel.yaml  nlmatchfilter_cherel_ms.yaml  nlmatchfilter_ms.yaml
conf/model/optimizer/: adam.yaml
conf/model/scheduler/: cosine_annealing_warm_restart.yaml
conf/trainer/: cpu.yaml  gpu.yaml
src/nonlocal_matchfilter/: test.py  train.py
src/nonlocal_matchfilter/data/: image_datasets.py  serialize.py  transforms.py
src/nonlocal_matchfilter/isp/: pipeline.py  sensor.py
src/nonlocal_matchfilter/lightning_modules/: data.py  model.py
src/nonlocal_matchfilter/networks/: __init__.py  nonlocalmf.py
src/nonlocal_matchfilter/ops/: conv.py  ffn.py  padding.py
